fixed apadtive on mobile. Pages #75

--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
 
-    @media screen and (min-width: $old-phones) and (max-width: 340px) {
+    @media screen and (min-width: $old-phones) and (max-width: $new-phones) {
       justify-content: center;
     }
   }
